--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,69 @@
 body {
 	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-		sans-serif;
+	font-family: "Roboto";
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	padding: 0 0 98px;
+	background-color: #fcfcfc;
 }
 
-code {
-	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-		monospace;
+.comment-body-text {
+	font-family: "Roboto";
+	font-size: 14px;
+	font-weight: 500;
+	font-stretch: normal;
+	font-style: normal;
+	line-height: 1.43;
+	letter-spacing: 0.25px;
+	color: #6b6b6b;
+}
+
+.comment-body-time {
+	font-family: "Roboto";
+	font-size: 11px;
+	font-weight: normal;
+	font-stretch: normal;
+	font-style: normal;
+	line-height: normal;
+	letter-spacing: normal;
+	color: #767676;
+}
+
+.comment-body {
+	opacity: 0.8;
+	border-radius: 6px;
+	border: solid 1px #979797;
+	background-color: #fff;
+}
+
+.comment-body-right-side {
+	opacity: 0.06;
+	border-radius: 6px;
+	border: solid 1px #606060;
+	background-color: #606060;
+}
+
+.title {
+	box-shadow: 0 1px 4px 0 rgba(0, 21, 41, 0.12);
+	background-image: linear-gradient(to bottom, #ececec -32%, #fff 124%);
+}
+
+.title > h3 {
+	object-fit: contain;
+	font-family: "Baskerville";
+	font-size: 28px;
+	font-weight: normal;
+	font-stretch: normal;
+	font-style: normal;
+	line-height: 1;
+	letter-spacing: normal;
+	color: #3b3b3b;
+}
+
+.table-container {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-template-rows: repeat(4, 1fr);
+	grid-column-gap: 0px;
+	grid-row-gap: 0px;
 }
