Finished General layout on Main component, only table and item left

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,9 @@
 body {
 	margin: 0;
 	font-family: "Roboto";
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	padding: 0 0 98px;
 	background-color: #fcfcfc;
 }
-
-.comment-body-text {
+/*.comment-body-text {
 	font-family: "Roboto";
 	font-size: 14px;
 	font-weight: 500;
@@ -41,29 +37,4 @@ body {
 	border-radius: 6px;
 	border: solid 1px #606060;
 	background-color: #606060;
-}
-
-.title {
-	box-shadow: 0 1px 4px 0 rgba(0, 21, 41, 0.12);
-	background-image: linear-gradient(to bottom, #ececec -32%, #fff 124%);
-}
-
-.title > h3 {
-	object-fit: contain;
-	font-family: "Baskerville";
-	font-size: 28px;
-	font-weight: normal;
-	font-stretch: normal;
-	font-style: normal;
-	line-height: 1;
-	letter-spacing: normal;
-	color: #3b3b3b;
-}
-
-.table-container {
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-	grid-template-rows: repeat(4, 1fr);
-	grid-column-gap: 0px;
-	grid-row-gap: 0px;
-}
+}*/
